--- a/WebContent/paginas/rodape.xhtml
+++ b/WebContent/paginas/rodape.xhtml
@@ -14,7 +14,7 @@
 		<h:form>
 			<center>
 				<p:separator />
-				<h5>Desenvolvido por Mauricio Tavares</h5>
+				<h5>PROINT II</h5>
 			</center>
 		</h:form>
 	</ui:composition>
